# everything

./: .gitignore  README  example1.txt  quickdoc_generator.py  setup.py
googlecode/wiki/: FrequentlyAskedQuestions.wiki  G5DevStandards.wiki
historical/googlecode/jzapi/native-trunk/: Makefile.am  bind.h  simplebind.cpp  simpleclassbind.cpp  testplugin.cpp  testplugin.h
native-trunk/: README.txt  testplugin.cpp  testplugin.def  testplugin.h  testplugin.sln  testplugin.vcproj
native-trunk/Debug/: BuildLog.htm  bzfs.lib  mt.dep  testplugin.exp  testplugin.ilk  testplugin.lib  vc90.idb
notes/: views.txt
projects/git-subtree-python/: git-subtree-python  notes
quickdoc/: core.py  decorators.py  extension.py  indentstream.py
sandbox/: .classpath  desc.txt  example.jks  selfsigned.jks
trunk/: .classpath  .project  desc.txt  readme.txt  techinfo.txt
wiki/: Actions.wiki  AnotherTestPage.wiki  BZNetwork.wiki  BZNetworkConfigStructure.wiki  BZNetworkFAQ.wiki  BZNetworkGettingStarted.wiki  BZNetworkLiveServerInfo.wiki  BZNetworkPermissions.wiki  BZNetworkSettingsProps.wiki  BZNetworkTODO.wiki  BZNetworkTables.wiki  BzTrainingAdmin.wiki  ClientSettingsManager.wiki  Downloads.wiki  ExamplePluginManifests.wiki  FrequentlyAskedQuestions.wiki  G4PluginSystem.wiki  G5DevIdeas.wiki  G5DevStandards.wiki  GettingStarted.wiki  Glossary.wiki  Me.wiki  NoDownloads.wiki  OpenGrooveDatabase.wiki  Permissions.wiki  PersonalTimeMachine.wiki  PluginSystemRequirements.wiki  SomePage.wiki  TableOfContents.wiki  TestPage.wiki  XSM.wiki  XSMImplementation.wiki  XSMinline.wiki
(+2619 files in other folders)
